--- a/.github/workflows/php-checks.yml
+++ b/.github/workflows/php-checks.yml
@@ -33,3 +33,6 @@ jobs:
       run: |
         composer require --dev phpstan/phpstan
         vendor/bin/phpstan analyse src --level=4
+
+    - name: Run tests
+      run: vendor/bin/phpunit
