--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,17 @@
     "spryker/kernel": "^3.52.0"
   },
   "require-dev": {
+    "phpunit/phpunit": "^10.0",
+    "mockery/mockery": "^1.5"
   },
   "autoload": {
     "psr-4": {
       "SprykerCommunity\\": "src/SprykerCommunity"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "SprykerCommunityTest\\": "tests/SprykerCommunityTest"
     }
   },
   "authors": [
