--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,9 @@
     "spryker/kernel": "^3.52.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^10.0",
-    "mockery/mockery": "^1.5"
+    "mockery/mockery": "^1.5",
+    "phpstan/phpstan": "^2.1",
+    "phpunit/phpunit": "^10.0"
   },
   "autoload": {
     "psr-4": {
