--- a/.github/workflows/php-checks.yml
+++ b/.github/workflows/php-checks.yml
@@ -31,7 +31,7 @@ jobs:
     - name: PHPStan
       run: |
         composer require --dev phpstan/phpstan
-        vendor/bin/phpstan analyse src --level=4
+        vendor/bin/phpstan analyse
 
     - name: Run tests
       run: vendor/bin/phpunit
